# Algorithm-training

./: CMakeLists.txt  README.md
02Prefix_sum_and_differential/: CMakeLists.txt  P1314.cpp
03Ruler_method/: 2379.cpp  731.cpp  CMakeLists.txt  LCR008.cpp
04Dichotomy/: BaboonEatBananas.cpp  CMakeLists.txt  JumpingStones.cpp  P1873.cpp  P3743.cpp  P3853.cpp
05Prime/: CMakeLists.txt  EhrlichSieve.cpp  EulerSieve.cpp  NaiveSieving.cpp  P1036.cpp  P1069.cpp
06FastPower/: CMakeLists.txt  FastPower.cpp  P1226.cpp  P3390.cpp
0708AccuracyCalculations/: Addition.cpp  division.cpp
07AccuracyCalculations/: CMakeLists.txt  Subtraction.cpp  multiplication.cpp
08Cupidity/: CMakeLists.txt  Jump.cpp  MergeFruits.cpp  RatsAndCheese.cpp
09Cupidity/: LC605.cpp  P1106.cpp  P1803.cpp  P5019.cpp
10RecursionAndPartition/: CMakeLists.txt  HanoiTower.cpp  MaxSubarraySum.cpp  P1028.cpp  P1928.cpp
11LinkedLists/: CMakeLists.txt  InvertLinkedList.cpp  LinkedLists.cpp  TrainingPlan.cpp
12StacksAndQueues/: AsteroidCollisions.cpp  CMakeLists.txt  CatchRainwater.cpp  MonotonicStacks.cpp  P4387.cpp
13BinaryTree/: 226.cpp  236.cpp  CMakeLists.txt  LCR145.cpp
14AndCheckTheCollection/: CMakeLists.txt  P1525.cpp  P3367.cpp
15Search/: 200.cpp  CMakeLists.txt  P1025.cpp  P1443.cpp  P1464.cpp  P1706.cpp  P8693.cpp
16Graph/: 01.cpp  02.cpp  CMakeLists.txt
17SortPath/: BellmanFord.cpp  CMakeLists.txt  DijkstraPro.cpp  P1462.cpp  P8802.cpp  SPFA.cpp
18MinimumSpanningTree/: CMakeLists.txt  P1194.cpp  P1265.cpp
19TopologicalSorting/: CMakeLists.txt  Kahn.cpp  P1113.cpp  P1983.cpp  (+1 more)
(+27 files in other folders)
