cmake_minimum_required(VERSION 3.25)
project(Algorithm_Training)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(04Dichotomy)
add_subdirectory(05Prime)
add_subdirectory(06FastPower)
add_subdirectory(0708AccuracyCalculations)
add_subdirectory(09Cupidity)
add_subdirectory(10RecursionAndPartition)
add_subdirectory(11LinkedLists)
add_subdirectory(12StacksAndQueues)
add_subdirectory(13BinaryTree)
add_subdirectory(14AndCheckTheCollection)
add_subdirectory(15Search)
add_subdirectory(16Graph)
add_subdirectory(17SortPath)
add_subdirectory(18MinimumSpanningTree)
add_subdirectory(19TopologicalSorting)
add_subdirectory(20EulerPath)